# nexcore-sentinel

./: Cargo.toml  LICENSE  README.md  sentinel.service
.github/workflows/: ci.yml
src/: config.rs  engine.rs  error.rs  firewall.rs  grounding.rs  lib.rs  main.rs  parser.rs  persistence.rs  test_helpers.rs  tracker.rs  types.rs  watcher.rs  whitelist.rs
tests/: integration.rs
